--- a/Assigment.html
+++ b/Assigment.html
@@ -1,196 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-        <style type="text/css">
-            h1,h2 {
-                color: cornflowerblue;
-                font-family: sans-serif;
-            }
+		<title> Linqing's Website </title>
+	</head>
 
-            body {
-                font-size: 20px;
-                /* background-color:aliceblue; */
-                margin:0px;
-            }
+	<body>
+		<h1>Hello World!!!!!!!!</h1>
 
-            table {
-                width: 100%;
-                border-collapse: collapse;
-            }
 
-            td{
-                border: 1px solid black;
-                padding: 3px;
-            }
+		<marquee>Welcome!!!</marquee>
 
-            td.empty {
-                background-color: #ddd;
-            }
+		<p>This is a second <a href="second.html">paragraph</a> of text.</p>
 
-            .container {
-                margin: 0 auto;
-                padding: 5px;
-                max-width: 1200px;
-            }
+		<h2>Second Header</h2>
 
-            #menu {
-                position: relative;
-                display: block;
-                width: 100%;
-                background-color: darkslateblue;
-                font-family: sans-serif;
-                color: white;
-            }
-            .page-name {
-                font-weight: bold;
-            }
-            .menu-item {
-                position: relative;
-                padding: 0.5em;
-                display: inline-block;
-            }
-            .menu-item a {
-                text-decoration: none;
-                color: white;
-            }
-            .menu-item:hover {
-                background-color: indigo;
-                cursor: pointer;
-            }            
-            .menu-item .dropdown {
-                display: none;
-            }
-            .menu-item:hover .dropdown {
-                display: block;
-                position: absolute;
-                top: 2em;
-                left: 0px;
-                /* height: 200px; */
-                min-width: 150px;
-                background-color: darkslateblue;
-            }
-            .dropdown-item {
-                position: relative;
-                padding: 0.5em;
-                display: block;
-            }
-            .dropdown-item:hover {
-                background-color: indigo;
-            }
-        </style>
-    </head>
-    <body data-new-gr-c-s-check-loaded="14.991.0" data-gr-ext-installed="">
-        <div id="menu">
-            <div class="menu-item page-name">Linqing's Site</div>
-            <div class="menu-item">Home</div>
-            <div class="menu-item">
-                Assignments
-                <div class="dropdown">
-                    <div class="dropdown-item">Hello!</div>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            
+		<p>This is a paragraph of text.</p>
 
-        <h1>Linqing's Assignments</h1>
-        <p>Full-stack app development 2021</p >
-        <ul>
-            <li>Difficulty: 1 = no problem at all, 5 = could not do</li>
-            <li>Usefulness: 1 = not a good use of time, 5 = very useful</li>
-        </ul>
-        <h2>Week 1: Building a website</h2>
-        <table>
-            <thead>
-                <tr>
-                    <td>#</td>
-                    <td>Assignment</td>
-                    <td>Submission</td>
-                    <td>Time (hours)</td>
-                    <td>Difficult (1-5)</td>
-                    <td>Useful (1-5)</td>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>1.1</td>
-                    <td>Watch tutorial 1, follow along</td>
-                    <td class="empty">N/A</td>
-                    <td>1.5</td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>1.2</td>
-                    <td>Deploy a website to GitHub pages</td>
-                    <td>< a href="https://orlandpm-demo.github.io">link</ a></td>
-                    <td>1</td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>1.3</td>
-                    <td>Deploy an assignments page (this page!) </td>
-                    <td>< a href="https://orlandpm-demo.github.io/assignments.html">link</ a></td>
-                    <td>1.5</td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>1.4*</td>
-                    <td>Create a personal/professional homepage</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>1.5</td>
-                    <td>Create two screens of your first app</td>
-                    <td>< a href=""></ a></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>1.6*</td>
-                    <td>Create a side-menu in CSS</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <!-- <tr>
-                    <td>1.7*</td>
-                    <td>Create a periodic table of the elements using HTML & CSS</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr> -->
-                <tr>
-                    <td>1.A</td>
-                    <td>What did you like this week?</td>
-                    <td colspan="4"></td>
-                </tr>
-                <tr>
-                    <td>1.B</td>
-                    <td>What didn't you like this week?</td>
-                    <td colspan="4"></td>
-                </tr>
-                <tr>
-                    <td>1.C</td>
-                    <td>How can we improve the material from this week?</td>
-                    <td colspan="4"></td>
-                </tr>
-                <tr>
-                    <td>1.D*</td>
-                    <td>Show us anything else you coded up this week!</td>
-                    <td colspan="4"></td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-    
+		<p>This is a second paragraph of text.</p>
+
+		<ul> 
+			<li>John</li>
+			<li>Paul</li>
+			<li>George</li>
+			<li>Ringo</li>
+		</ul>
+
+		<img src="dog.jpg"> 
+
+	
+
 
 </body></html>
