--- a/index.html
+++ b/index.html
@@ -5,28 +5,18 @@
 	</head>
 
 	<body>
-		<h1>Hello World!!!!!!!!</h1>
 
 
 		<marquee>Welcome!!!</marquee>
 
-		<p>This is a second <a href="second.html">paragraph</a> of text.</p>
+		<p>This is a my <a href="https://linqingz.github.io/Assigment.html">assigment page</a> of text.</p>
 
-		<h2>Second Header</h2>
 
-		<p>This is a paragraph of text.</p>
 
-		<p>This is a second paragraph of text.</p>
+		<p>I only did a few of the homework. But I understand the course materials. </p>
+		
 
-		<ul> 
-			<li>John</li>
-			<li>Paul</li>
-			<li>George</li>
-			<li>Ringo</li>
-		</ul>
-
-		<img src="dog.jpg"> 
-
+		
 	
 
 
