--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 		<marquee>Welcome!!!</marquee>
 
-		<p>This is a my <a href="https://linqingz.github.io/Assigment.html">assigment page</a> of text.</p>
+		<p>This is a my <a href="https://linqingz.github.io/Assigment.html">assigment page</a>.</p>
 
 
 
