--- a/Assigment.html
+++ b/Assigment.html
@@ -190,6 +190,8 @@
                 </tr>
             </tbody>
         </table>
+        <table> https://www.cs.cmu.edu/~112/notes/notes-1d-lists.html </table>
+           
     </div>
     
 
